# api-checker

./: .gitignore  Dockerfile  LICENSE  NOTICE  README.md  architect_output.md  config.yaml  content.yaml  docker-compose.yml  pyproject.toml  requirements.txt
docs/: CONFIG.md  REPORT_GUIDE.md
scripts/: audit.py  batch_audit.py  deploy.sh
skill/: install.sh
skill/apicheck/: SKILL.md
src/api_relay_audit/: __init__.py
src/api_relay_audit/adapter/: __init__.py  anthropic_adapter.py  auto_adapter.py  base.py  openai_adapter.py
src/api_relay_audit/client/: curl_fallback.py  endpoint.py  http_client.py
src/api_relay_audit/config/: __init__.py  loader.py  schema.py
src/api_relay_audit/detectors/: __init__.py  base.py  context_truncation.py  conversation_memory.py  data_exfiltration.py  hidden_injection.py  http_header_deep.py  instruction_override.py  instruction_priority.py  response_format.py  response_latency.py  semantic_truncation.py  token_injection.py
src/api_relay_audit/engine/: __init__.py  auditor.py  result.py  test_suite.py
src/api_relay_audit/reports/: __init__.py  json_exporter.py  markdown_exporter.py  risk_calculator.py
src/api_relay_audit/utils/: __init__.py  canary.py  formatting.py  token_estimator.py
src/api_relay_audit/web/: __init__.py  admin_pages.py  main.py  (+1 more)
tests/: conftest.py  test_adapters.py  test_detectors.py  test_risk_calculator.py
tests/fixtures/: mock_relay.py  sample_config.yaml
tests/unit/: test_adapters.py  test_canary.py  test_client.py  test_config.py  test_reporter.py  test_risk_calculator.py  test_web_session.py
(+1 files in other folders)
